Stop any overflow inside an Interactive container

--- a/src/app/async-components/Interactive/index.scss
+++ b/src/app/async-components/Interactive/index.scss
@@ -2,6 +2,11 @@
   display: none;
 }
 
+.PresentationLayer__Interactive {
+  margin: 0;
+  overflow: hidden;
+}
+
 .PresentationLayer__Interactive > * {
   margin-left: auto;
   margin-right: auto;
